<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/dbxMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/item_name" />

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbxMsg2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dbxMsg2"
        android:ems="10"
        android:inputType="textCapCharacters|textCapWords|textCapSentences" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editItemName"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editItemName"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/item_amount" />

    <EditText
        android:id="@+id/editItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/TextView01"
        android:ems="10"
        android:inputType="text|number" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editItemAmount"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/create_item" />

</RelativeLayout>

</ScrollView>